Add binary operators for evaluation functions

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-envlist = clean,py36,py37,py38,report
+envlist = clean,py38,report
 
 [tool:pytest]
 addopts =
     --cov-report=term-missing
 
 [testenv]
-passenv = CI TRAVIS TRAVIS_*
 changedir = tests
 commands =
     pytest --cov --cov-append --cov-config={toxinidir}/.coveragerc {posargs:-vv}
@@ -16,8 +15,7 @@ deps =
     pytest-cov
     codecov
 depends =
-    {py36,py37,py38}: clean
-    report: py36,py37,py38
+    report: py38
 
 [testenv:report]
 skip_install = true
