Modify setup dependencies

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
-pandas>=1.0.0
-jsonschema>=3.2.0
 python-dateutil
+requests
+pandas>=1.0.0
+scikit-learn
+jsonschema>=3.2.0
 Shapely>=1.7.0
 histore==0.1.2
