Change EvalFunction API, change select_clause interface

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,11 @@
 [tox]
 envlist = clean,py38,report
 
+[flake8]
+max-line-length = 127
+exclude = tests/*
+max-complexity = 12
+
 [tool:pytest]
 addopts =
     --cov-report=term-missing
