--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,7 +7,7 @@
 
 include LICENSE
 include *.rst
-recursive-include openclean *.py
+recursive-include openclean *.py *.json
 prune docs/_build
 recursive-include docs *.py
 recursive-include docs *.rst
