--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -11,13 +11,10 @@ on:
 
 jobs:
   run:
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-    env:
-      OS: ${{ matrix.os }}
-      PYTHON: '3.8'
+        python-version: [3.8]
 
     steps:
     - uses: actions/checkout@v2
@@ -41,6 +38,5 @@ jobs:
         files: ./coverage1.xml,./coverage2.xml
         directory: ./coverage/reports/
         flags: unittests
-        env_vars: OS,PYTHON
         name: codecov-umbrella
         verbose: true
