--- a/.github/workflows/code-coverage.yml
+++ b/.github/workflows/code-coverage.yml
@@ -29,14 +29,12 @@ jobs:
         pip install .[tests]
     - name: Test with pytest and generate coverage report
       run: |
-        pytest --cov=./openclean --cov-report=xml
+        pytest --cov=./openclean --cov-report=xml tests/
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
         file: ./coverage.xml
-        files: ./coverage1.xml,./coverage2.xml
-        directory: ./coverage/reports/
         flags: unittests
         name: codecov-umbrella
         verbose: true
