--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
 future
 python-dateutil
 requests
+dill
 pandas>=1.0.0
 scikit-learn
 jsonschema>=3.2.0
 Shapely>=1.7.0
 histore==0.2.2
+flowserv-core=0.6.0
 fuzzyset==0.0.19
 jellyfish
 scipy
