--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,7 @@ scikit-learn
 jsonschema>=3.2.0
 Shapely>=1.7.0
 histore==0.2.2
-flowserv-core=0.6.0
+flowserv-core==0.6.0
 fuzzyset==0.0.19
 jellyfish
 scipy
