--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a variety of Python versions
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python package
+name: Run package CI tests
 
 on:
   push:
@@ -33,7 +33,7 @@ jobs:
         # stop the build if there are Python syntax errors or undefined names
         flake8 ./openclean --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 ./openclean --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 ./openclean --count --exit-zero --max-complexity=12 --max-line-length=127 --statistics
     - name: Test with pytest and generate coverage report
       run: |
         pytest tests/
