Refactor data repositories that provide access to open data

--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,5 @@ resources/config/localdev
 # Example data files
 
 examples/notebooks/city-names/ic3t-wcy2.tsv.gz
+examples/notebooks/parking-violations/jt7v-77mi.tsv.gz
+examples/notebooks/data/
