--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,6 @@ python-dateutil
 requests
 dill
 pandas>=1.0.0
-Cython>=0.28.5
 scikit-learn
 jsonschema>=3.2.0
 Shapely>=1.7.0
@@ -12,3 +11,9 @@ flowserv-core==0.6.0
 fuzzyset==0.0.19
 jellyfish
 scipy
+sphinx 
+sphinx-rtd-theme
+sphinxcontrib-apidoc 
+jupyter-sphinx 
+git+https://github.com/spatialaudio/nbsphinx.git@master
+nbsphinx-link
