--- a/.gitignore
+++ b/.gitignore
@@ -115,4 +115,5 @@ resources/config/localdev
 
 examples/notebooks/city-names/ic3t-wcy2.tsv.gz
 examples/notebooks/parking-violations/jt7v-77mi.tsv.gz
+examples/notebooks/parking-violations/refdata_tmp/
 examples/notebooks/data/
