--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -8,7 +8,6 @@ jsonschema>=3.2.0
 Shapely>=1.7.0
 histore==0.2.2
 flowserv-core==0.6.0
-fuzzyset==0.0.19
 jellyfish
 scipy
 sphinx
@@ -17,5 +16,6 @@ sphinxcontrib-apidoc
 jupyter-sphinx
 git+https://github.com/spatialaudio/nbsphinx.git@master
 nbsphinx-link
+sphinxcontrib-spelling
 pooch==1.3.0
 refdata>=0.2.0
