--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -7,7 +7,7 @@ pandas>=1.0.0
 scikit-learn
 jsonschema>=3.2.0
 histore==0.3.1
-flowserv-core==0.6.0
+flowserv-core>=0.8.0
 jellyfish
 refdata>=0.2.0
 pooch==1.3.0
