--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ dill
 pandas>=1.0.0
 scikit-learn
 jsonschema>=3.2.0
-histore==0.3.1
+histore>=0.4.0
 flowserv-core>=0.8.0
 jellyfish
 refdata>=0.2.0
